fix(gux-modal): fix focus ring cropping (#620)
COMUI-3103

--- a/packages/genesys-spark-components/src/components/stable/gux-modal/gux-modal.less
+++ b/packages/genesys-spark-components/src/components/stable/gux-modal/gux-modal.less
@@ -24,7 +24,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      padding: 40px;
+      padding: 40px 0;
       background: @gux-grey-100;
       border: 1px solid @gux-grey-30;
       border-radius: 4px;
@@ -54,13 +54,14 @@
       }
 
       .gux-modal-header {
-        padding-bottom: 24px;
+        padding: 0 40px 24px;
         margin: 0;
         .h1();
       }
 
       .gux-modal-content {
         max-height: 432px;
+        padding: 0 40px;
         margin: 0 8px 24px;
         overflow-y: auto;
 
@@ -72,6 +73,7 @@
       .gux-button-footer {
         display: flex;
         justify-content: space-between;
+        padding: 0 40px;
 
         .gux-left-align-buttons {
           gux-button {
